[package]
name = "kafka01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# alias rust-musl-builder='docker run --rm -it -v "$(pwd)":/home/rust/src messense/rust-musl-cross:x86_64-musl'

[dependencies]
kafka = "0.10.0"
log = "0.4.20"
once_cell = "1.17.1"
prost = "0.12.3"
# rdkafka = { version = "0.36.2", features = ["cmake-build", "cmake_build"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = { version = "0.12.3" }
